sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:8: error: not found: value i
    for (j<-0 to taille -(i+1)){
                          ^